--- a/pages/home/home.module.scss
+++ b/pages/home/home.module.scss
@@ -1,8 +1,9 @@
 .theatreRect {
+  position: fixed;
   height: 100px;
   width: 100px;
   background-color: green;
-  margin: 0 auto;
+  margin: 400px auto;
 }
 
 .accordion {
@@ -59,10 +60,80 @@
 
 .home {
   // height: 300vh;
-  padding-top: var(--header-height);
+  background-color: var(--backgroundAlpha);
+
+  .hero {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 16vh;
+    margin-bottom: 40vh;
+    text-transform: uppercase;
+
+    & h1 {
+      color: var(--neonBlue);
+      font-size: 28vw;
+      letter-spacing: 2vw;
+
+      &:hover {
+        cursor: default;
+      }
+    }
+
+    & h2 {
+      font-weight: lighter;
+      font-size: 2.6vw;
+      letter-spacing: 0.2vw;
+      background-color: var(--neonBlueOpacity);
+      padding: 0.5vh 2vw;
+
+      &:hover {
+        cursor: default;
+      }
+    }
+  }
+
+  .plan-over-view {
+    height: 140vh;
+    padding: 0 3.6vw;
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-transform: uppercase;
+
+    & p {
+      font-weight: lighter;
+      font-size: 3vw;
+      margin-bottom: 6vh;
+    }
+
+    span {
+      border-top: 1px solid var(--lightBlue);
+      border-bottom: 1px solid var(--lightBlue);
+    }
+  }
 
   .marquee {
     font-size: 6vw;
+    text-transform: uppercase;
+
+    & span {
+      text-shadow: 1px 1px 4px var(--lightBlue);
+      border: none;
+    }
+    & span .plan1 {
+      color: rgb(0, 183, 202);
+    }
+    & span .plan2 {
+      color: rgb(0, 202, 0);
+    }
+    & span .plan3 {
+      color: rgb(242, 0, 112);
+    }
 
     .item {
       margin-right: mobile-vw(24px);
@@ -73,71 +144,218 @@
     }
   }
 
-  .kinesis {
-    > * {
-      width: 250px;
-      height: 250px;
-      background-color: red;
-      margin: 0 auto;
+  .about-pros {
+    margin: 20vh 0;
+    height: 150vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-shadow: none;
+    color: var(---lightBlue);
+
+    div {
+      background-color: rgb(0, 183, 202);
+    }
+
+    span {
+      font-size: 8vw;
+      padding: 1vw;
+    }
+    span:hover {
+      cursor: default;
+    }
+  }
+
+  #vertical {
+    height: 260vh;
+    width: 100vw;
+  }
+
+  .vertical {
+    color: var(--lightBlue);
+    padding: 12vh 0;
+
+    & .vertical-content {
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
+    }
+
+    & .vertical-container {
+      width: 95vw;
+      margin: auto;
+    }
+
+    & h3 {
+      padding-left: 1vw;
+      text-transform: uppercase;
+      font-size: 8vw;
+      border-left: 2px solid rgb(0, 183, 202);
+    }
+    & span {
+      color: var(--neonBlue);
+    }
+
+    & .col-left {
+      height: 100vh;
+      width: 50%;
+    }
+    & .col-right {
+      width: 40%;
+
+      & span {
+        color: var(---lightBlue);
+      }
+    }
+
+    & .vertical-item {
+      font-weight: lighter;
+
+      & p {
+        font-size: 2.6vw;
+      }
+      & span {
+        display: flex;
+        font-size: 1.2vw;
+        justify-content: flex-end;
+        margin-right: 2vw;
+      }
+
+      &:first-child {
+        margin-top: 8vh;
+      }
+      &:not(:last-child) {
+        margin-bottom: 30vh;
+      }
+    }
+  }
+
+  .our-history {
+    height: 140vh;
+    padding: 0 3.6vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+    color: var(---lightBlue);
+
+    & .history-container {
+      padding: 2vh 2vw;
+      background-color: var(--bgBlueOpacity);
+    }
+
+    & h3 {
+      font-size: 4vw;
+      text-transform: uppercase;
+      margin: 2vh 0;
+      border-bottom: 2px solid var(--neonBlue);
+    }
+    & p {
+      font-weight: lighter;
+      font-size: 2vw;
+    }
+    & span {
+      display: block;
+    }
+    & span:not(:last-child) {
+      margin-bottom: 4vh;
     }
   }
 
   .slider {
     overflow: hidden;
     margin-bottom: 250px;
-  }
 
-  .slider-header {
-    padding-top: desktop-vw(50px);
-    text-transform: uppercase;
-    font-size: 34px;
+    .slider-header {
+      display: flex;
+      justify-content: center;
+      padding-top: desktop-vw(50px);
+      text-transform: uppercase;
 
-    p:first-child {
-      font-size: 14px;
+      p:first-child {
+        font-size: 5vw;
+        margin-bottom: 2vh;
+        border-bottom: 2px solid var(--neonBlue);
+      }
     }
   }
 
   .slide-buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2vh;
+    padding: 2vh 2vw;
+    gap: 8vw;
     text-transform: uppercase;
+    font-size: 1.2vw;
     font-weight: 700;
     padding-right: desktop-vw(10px);
     user-select: none;
-    cursor: pointer;
+
+    .slide-buttons button {
+      cursor: pointer;
+      transition-duration: 0.3s;
+    }
+
+    button:first-child:hover {
+      color: var(--neonBlue);
+      transform: translatex(-12px);
+      transition-duration: 0.3s;
+    }
+    button:last-child:hover {
+      color: var(--neonBlue);
+      transform: translatex(12px);
+      transition-duration: 0.3s;
+    }
   }
 
   .slide {
     min-width: 33vw;
     display: flex;
     flex-direction: column;
+    transition-duration: 0.3s;
 
     .slide-inner {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      margin-bottom: 6vh;
       position: relative;
+      color: var(--lightBlue);
+      background-color: var(--bgBlueOpacity);
+      border: 1px solid var(--lightBlue);
       overflow: hidden;
-      height: desktop-vw(600px);
+      height: desktop-vh(500px);
+      width: desktop-vw(350px);
+      padding: desktop-vh(16px) desktop-vw(16px);
+      transition-duration: 0.3s;
       cursor: none;
 
-      .slide-title {
-        font-size: desktop-vw(25px);
-        font-weight: 900;
-        text-transform: uppercase;
-        padding-bottom: desktop-vw(25px);
+      .number {
+        z-index: 1;
+        font-weight: bold;
+        font-size: 4vw;
       }
 
-      .slide-text {
+      .details {
+        z-index: 1;
+        font-size: 2.4vw;
+      }
+
+      /* .slide-text {
         font-size: desktop-vw(16px);
         font-weight: 400;
         padding-bottom: desktop-vw(25px);
-      }
+      } */
 
       .slide-img {
         position: absolute;
+        opacity: 0.6;
         top: 50%;
         left: 50%;
-        height: 50%;
-        min-width: 50%;
+        height: 100%;
+        min-width: 100%;
         transform: translate(-50%, -50%);
         object-fit: cover;
 
@@ -146,5 +364,309 @@
         }
       }
     }
+
+    .slide-inner:hover {
+      color: var(--neonBlue);
+      box-shadow: 0 0 0.2rem var(--lightBlue), 0 0 0.2rem var(--lightBlue),
+        0 0 2rem var(--neonBlue), 0 0 0.8rem var(--neonBlue),
+        0 0 2.8rem var(--neonBlue), inset 0 0 1.3rem var(--neonBlue);
+      transition-duration: 0.3s;
+
+      .slide-img {
+        opacity: 0.2;
+      }
+    }
+  }
+
+  .device {
+    height: 150vh;
+    width: 50vw;
+    margin-left: 4vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: var(--lightBlue);
+
+    div {
+      padding: 2vh 2vw;
+      background-color: var(--bgBlueOpacity);
+    }
+
+    p {
+      text-transform: uppercase;
+      font-size: 3.4vw;
+      border-bottom: 2px solid var(--neonBlue);
+      margin-bottom: 2vh;
+    }
+
+    ul {
+      color: var(---lightBlue);
+      font-weight: lighter;
+      font-size: 2vw;
+
+      li:not(:last-child) {
+        margin-bottom: 4vh;
+      }
+      li span {
+        color: var(--neonBlue);
+      }
+    }
+  }
+
+  .choose-plan {
+    height: 140vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+    color: var(---lightBlue);
+
+    .plans-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 2vh;
+      margin: 4vh 4vw;
+      padding: 2vh 2vw;
+      background-color: var(--bgBlueOpacity);
+      width: 50vw;
+
+      .title {
+        text-align: center;
+        font-size: 4vw;
+      }
+
+      .plans-array {
+        display: flex;
+        justify-content: center;
+        gap: 3vw;
+        font-size: 2vw;
+        font-weight: lighter;
+        text-transform: uppercase;
+        margin-bottom: 2vh;
+
+        button {
+          padding: 0 1vw;
+          border-bottom: 2px solid var(--bgBlueOpacity);
+          transition-duration: 0.3s;
+
+          &:nth-child(1) {
+            color: var(--neonBlue);
+
+            &:hover,
+            &:focus {
+              border-bottom: 2px solid;
+            }
+          }
+          &:nth-child(2) {
+            color: var(--neonGreen);
+
+            &:hover,
+            &:focus {
+              border-bottom: 2px solid;
+            }
+          }
+          &:nth-child(3) {
+            color: var(--neonPink);
+
+            &:hover,
+            &:focus {
+              border-bottom: 2px solid;
+            }
+          }
+        }
+      }
+
+      .plan-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        padding: 0 2vw;
+
+        .characteristics {
+          font-weight: lighter;
+          font-size: 2vw;
+
+          ul {
+            list-style: square;
+          }
+
+          li:not(:last-child) {
+            margin-bottom: 2.4vh;
+          }
+        }
+
+        .price {
+          text-align: center;
+          font-weight: bold;
+          font-size: 6vw;
+
+          span {
+            font-weight: lighter;
+            font-size: 1.6vw;
+          }
+        }
+      }
+      .select-plan {
+        text-align: center;
+        font-size: 2vw;
+        letter-spacing: 0.4vw;
+        text-transform: uppercase;
+
+        button {
+          background-color: var(--neonBlue);
+          padding: 2vh 8vw;
+          transition-duration: 0.3s;
+
+          &:hover {
+            color: var(--neonBlue);
+            background-color: var(--lightBlue);
+            transition-duration: 0.3s;
+          }
+        }
+      }
+    }
+  }
+
+  .billing-information {
+    height: 140vh;
+    width: 50vw;
+    margin-left: 4vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+
+    .billing-container {
+      max-width: 100%;
+      /* background-color: red; */
+      padding: 2vh 2vw;
+
+      .plan-information {
+        text-align: center;
+        color: var(--neonBlue);
+        padding: 0;
+
+        p:nth-child(1) {
+          color: var(--lightBlue);
+          font-size: 4vw;
+        }
+        p:nth-child(2) {
+          font-weight: lighter;
+          font-size: 2vw;
+        }
+        p:nth-child(3) {
+          font-size: 4vw;
+          padding: 2vh 0;
+
+          span {
+            padding: 2vh 0;
+            font-size: 1vw;
+          }
+        }
+      }
+
+      .card-information {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        gap: 2vw;
+
+        & > * {
+          font-size: 1vw;
+          display: flex;
+          align-items: center;
+          height: 100%;
+
+          input:not(:first-child) {
+            margin-left: 1vw;
+          }
+
+          input::-webkit-outer-spin-button,
+          input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+          }
+          /* input[type-number] {
+            -moz-appearance: textfield;
+          } */
+
+          input,
+          select {
+            padding: 1.4vh 1.4vw;
+            text-transform: uppercase;
+            background-color: var(--neonBlue);
+          }
+        }
+
+        .expiration {
+          input {
+            text-align: center;
+            width: 6vw;
+          }
+        }
+        .cvc {
+          input {
+            text-align: center;
+            width: 6vw;
+          }
+        }
+      }
+
+      .user-information {
+        margin: 4vh 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        gap: 2vw;
+        font-size: 1vw;
+
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+        /* input[type-number] {
+          -moz-appearance: textfield;
+        } */
+
+        input {
+          padding: 1.4vh 1.4vw;
+          text-transform: uppercase;
+          background-color: var(--neonBlue);
+        }
+      }
+
+      button {
+        width: 100%;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 2vw;
+        padding: 1vh 0;
+        background-color: var(--neonBlue);
+        transition-duration: 0.3s;
+
+        &:hover {
+          color: var(--neonBlue);
+          background-color: var(--lightBlue);
+          transition-duration: 0.3s;
+        }
+      }
+    }
+  }
+}
+
+.kinesis {
+  > * {
+    width: 350px;
+    height: 350px;
+    background-color: var(--neonBlue);
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
