--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,8 +1,8 @@
 // HERE WE DEFINE FONT-FACES, I.E.:
-// @font-face {
-//   font-family: 'Attila Sans Uniform';
-//   src: url('/fonts/Attila/AttilaSansUniform-Black.woff2') format('woff2'),
-//     url('/fonts/Attila/AttilaSansUniform-Black.woff') format('woff');
-//   font-display: swap;
-//   font-weight: 900;
-// }
+@font-face {
+  font-family: 'Electrolize', sans-serif;
+  src: url('../public/Electrolize-Regular.ttf') format('ttf'),
+    url('../public/Electrolize-Regular.ttf') format('ttf');
+  font-display: swap;
+  font-weight: 900;
+}
