--- a/styles/global.scss
+++ b/styles/global.scss
@@ -8,6 +8,7 @@
 @import './_font-style.scss';
 @import './_themes.scss';
 @import './_scroll.scss';
+@import url('//fonts.googleapis.com/css2?family=Electrolize&display=swap');
 
 :root {
   --header-height: #{mobile-vw(58px)};
@@ -19,7 +20,7 @@
 
 html {
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Electrolize', sans-serif;
   scrollbar-width: thin;
 
   &.lenis-stopped {
@@ -34,6 +35,7 @@ body {
 
 body {
   min-height: 100vh;
+  overflow: hidden;
 }
 
 // custom cursor
@@ -48,6 +50,13 @@ body {
 //   }
 // }
 
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
 a,
 button,
 input,
@@ -59,8 +68,8 @@ select {
 }
 
 *::selection {
-  background-color: var(--black);
-  color: var(--white);
+  background-color: var(--neonBlue);
+  color: var(--lightBlue);
 }
 
 svg.icon {
