--- a/components/cursor/cursor.module.scss
+++ b/components/cursor/cursor.module.scss
@@ -14,7 +14,7 @@
     border-radius: 100%;
     width: 40px;
     height: 40px;
-    background-color: var(--black);
+    background-color: var(--neonBlue);
     opacity: 0.4;
     transition: transform 600ms var(--ease-out-expo);
 
