--- a/styles/global.scss
+++ b/styles/global.scss
@@ -19,12 +19,15 @@
 
 html {
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Electrolize', sans-serif;
   scrollbar-width: thin;
 
   &.nav {
     overflow: hidden;
   }
+  /* &.nav::-webkit-scrollbar {
+    display: none;
+  } */
 }
 
 html,
@@ -34,6 +37,7 @@ body {
 
 body {
   min-height: 100vh;
+  overflow: hidden;
 }
 
 // custom cursor
@@ -48,6 +52,13 @@ body {
 //   }
 // }
 
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
 a,
 button,
 input,
@@ -59,7 +70,7 @@ select {
 }
 
 *::selection {
-  background-color: var(--black);
+  background-color: var(--neonBlue);
   color: var(--white);
 }
 
