--- a/components/navigation/navigation.module.scss
+++ b/components/navigation/navigation.module.scss
@@ -36,7 +36,7 @@
   &.closed {
     pointer-events: none;
     height: 0;
-
+    transition: 2s height var(--ease-out-expo);
     > * {
       opacity: 0;
     }
