--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,5 +5,8 @@ $mobile-breakpoint: 800px;
 $desktop-width: 1440px;
 $desktop-height: 900px;
 
+$tablet-width: 1120px;
+$tablet-height: 800px;
+
 $mobile-width: 375px;
 $mobile-height: 650px;
