--- a/pages/home/home.module.scss
+++ b/pages/home/home.module.scss
@@ -1,55 +1,3 @@
-.accordion {
-  overflow: hidden;
-  &:first-child {
-    border-top: 1px solid var(--black);
-  }
-
-  border-bottom: 1px solid var(--black);
-  padding: mobile-vw(10px) 0;
-
-  @include desktop {
-    padding: desktop-vw(10px) 0;
-  }
-
-  &__content {
-    // height: 0;
-
-    > :first-child {
-      padding-top: mobile-vw(10px);
-
-      @include desktop {
-        padding-top: desktop-vw(10px);
-      }
-    }
-
-    @keyframes open {
-      from {
-        height: 0;
-      }
-      to {
-        height: var(--radix-collapsible-content-height);
-      }
-    }
-
-    @keyframes close {
-      from {
-        height: var(--radix-collapsible-content-height);
-      }
-      to {
-        height: 0;
-      }
-    }
-
-    &:global([data-state='open']) {
-      animation: open 600ms var(--ease-out-expo);
-    }
-
-    &:global([data-state='closed']) {
-      animation: close 600ms var(--ease-out-expo);
-    }
-  }
-}
-
 .home {
   // height: 300vh;
   background-color: var(--backgroundAlpha);
@@ -641,12 +589,13 @@
         button {
           background-color: var(--neonBlue);
           padding: 1vh 8vw;
-          transition-duration: 0.3s;
+          transition-duration: 0.6s;
 
-          &:hover {
+          &:hover,
+          :focus {
+            transition-duration: 0.6s;
             color: var(--neonBlue);
-            background-color: var(--lightBlue);
-            transition-duration: 0.3s;
+            box-shadow: inset 14em 0 0 0 var(--lightBlue);
           }
         }
       }
@@ -689,6 +638,7 @@
         }
         p:nth-child(2) {
           font-weight: lighter;
+          color: var(--lightBlue);
           font-size: 4vw;
 
           @include desktop {
@@ -696,6 +646,7 @@
           }
         }
         p:nth-child(3) {
+          color: var(--lightBlue);
           font-size: 10vw;
           padding: 2vh 0;
 
