--- a/pages/home/home.module.scss
+++ b/pages/home/home.module.scss
@@ -1,6 +1,8 @@
 .home {
   // height: 300vh;
   background-color: var(--backgroundAlpha);
+  //overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 
   .hero {
     height: 80vh;
