overflow: scroll added

--- a/pages/home/home.module.scss
+++ b/pages/home/home.module.scss
@@ -1,7 +1,7 @@
 .home {
   // height: 300vh;
   background-color: var(--backgroundAlpha);
-  //overflow: scroll;
+  overflow: scroll;
   -webkit-overflow-scrolling: touch;
 
   .hero {
