--- a/pages/home/home.module.scss
+++ b/pages/home/home.module.scss
@@ -1,7 +1,6 @@
 .home {
-  // height: 300vh;
+  height: 100%;
   background-color: var(--backgroundAlpha);
-  z-index: 10;
 
   .hero {
     height: 80vh;
