final mobile scroll solution and navigation component minor organization change

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -37,7 +37,10 @@ body {
 
 body {
   min-height: 100vh;
-  //overflow: hidden;
+
+  @include desktop {
+    overflow: hidden;
+  }
 }
 
 // custom cursor
